--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -6,7 +6,7 @@
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
-
+  overflow: hidden;
   color-scheme: light dark;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
