--- a/Client/src/view/nav/Nav.css
+++ b/Client/src/view/nav/Nav.css
@@ -1,5 +1,5 @@
 .nav{
-    background-color: rgb(39, 39, 39);
+    background-color: var(--red);
     width: 100vw;
     height: 8vh;
     display: flex;
