--- a/Client/src/component/Button.css
+++ b/Client/src/component/Button.css
@@ -3,5 +3,10 @@
     z-index: 10;
     border: none;
     border-bottom: 1px solid rgb(109, 109, 109);
+    background-color: var(--red);
 }
 
+.button a{
+    text-decoration: none;
+    color: var(--white);
+}
