--- a/Client/src/component/Container.css
+++ b/Client/src/component/Container.css
@@ -1,10 +1,10 @@
 .container{
     display: flex;
-    align-items: center;
-    justify-content: center;
     background-color: var(--white);
 }
 .WH_landingPage{
+    position: relative;
+    height: 90vh;
 }
 .WH_home{
     height: 90vh;
