--- a/Client/src/component/ListFiles.css
+++ b/Client/src/component/ListFiles.css
@@ -1,3 +1,37 @@
-.list_grid{
+.list {
+    display: grid;
+    grid-template-columns: 1.5fr repeat(2, 1fr) 2fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    width: 80vw;
+    border-radius: 2px;
+}
+
+.list_titles {
+    grid-template-rows: 1fr;
+    border-bottom: 2px solid rgb(39, 39, 39);
+    height: 5vh;
+}
+
+.list_grid {
+    grid-template-rows: repeat(5, 1fr);
+    height: 30vh;
+}
+.bgGray{
+    background-color: rgba(218, 218, 218, 0.692);
+}
+
+.list__font{
+    display: flex;
+    align-items: center;
     
+    border: 1px solid rgb(202, 202, 202);
+}
+.list__font p{
+    margin-left: 10px;
+    text-overflow: ellipsis;
+}
+.list__font b{
+    margin-left: 10px;
+    font-size: 1.2rem;
 }
